styles in webpack2

--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
     <meta charSet="utf-8"/>
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <title>issue tracker</title>
+    <link href="/style.css" rel='stylesheet' />
   </head>
   <body>
     <div id="root" />
